--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </section>
     <!-- product list section -->
     <!-- testimonials  -->
-    <section class="testimonials" id="testimonials">
+     <section class="testimonials" id="testimonials">
         <div class="container">
             <div class="main-section">
                 <p>آراء العملاء</p>
@@ -184,7 +184,66 @@
             </div>
         </div>
         </div>
-    </section>
+    </section> 
+    <!-- <div class="container">
+      <div id="carouselExampleControlsNoTouching" class="carousel slide " data-bs-touch="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="card-testimonials swiper-slide">
+              <img  src="img/1 (1).svg" class="main-img img-fluid" alt="">
+              <p>أحلام</p>
+              <p class="reviw">هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق.</p>
+              <span>
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+              </span>
+          </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card-testimonials swiper-slide">
+              <img  src="img/1 (1).svg" class="main-img img-fluid" alt="">
+              <p>أحلام</p>
+              <p class="reviw">هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق.</p>
+              <span>
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+                  <img src="img/star.svg" alt="">
+              </span>
+          </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card-testimonials swiper-slide">
+                    <img  src="img/1 (1).svg" class="main-img img-fluid" alt="">
+                    <p>أحلام</p>
+                    <p class="reviw">هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق.</p>
+                    <span>
+                        <img src="img/star.svg" alt="">
+                        <img src="img/star.svg" alt="">
+                        <img src="img/star.svg" alt="">
+                        <img src="img/star.svg" alt="">
+                        <img src="img/star.svg" alt="">
+                        <img src="img/star.svg" alt="">
+                    </span>
+                </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div> -->
     <!-- testimonials  -->
     <!-- faq  -->
     <section class="faq" id="faq">
