--- a/index.html
+++ b/index.html
@@ -101,28 +101,28 @@
                 <h5>نوفر تصاميم وتشكيلات مميزة ، أطلق العنان لإبداعك وإبتكر تصميمك الخاص الآن!</h5>
             </div>
             <div class="row">
-                <div class="contnet col-12 col-md-6 col-lg-3">
+                <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
                     <img src="img/product new1.svg" class="img-fluid" alt="">
                     <div class="row">
                         <p class="col-8">بوكس رمضان كريم </p>
                         <p class="col-4 price">$15.00</p>
                     </div>
                 </div>
-                <div class="contnet col-12 col-md-6 col-lg-3">
+                <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
                     <img src="img/product new2.svg" class="img-fluid" alt="">
                     <div class="row">
                         <p class="col-8">بوكس رمضان كريم </p>
                         <p class="col-4 price">$15.00</p>
                     </div>
                 </div>
-                <div class="contnet col-12 col-md-6 col-lg-3">
+                <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
                     <img src="img/product new3.svg" class="img-fluid" alt="">
                     <div class="row">
                         <p class="col-8">بوكس رمضان كريم </p>
                         <p class="col-4 price">$15.00</p>
                     </div>
                 </div>
-                <div class="contnet col-12 col-md-6 col-lg-3">
+                <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
                     <img src="img/product new4.svg" class="img-fluid" alt="">
                     <div class="row">
                         <p class="col-8">بوكس رمضان كريم </p>
