--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
                 <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
                     <img src="img/product new2.svg" class="img-fluid" alt="">
                     <div class="row">
-                        <p class="col-8">بوكس رمضان كريم </p>
+                        <p class="col-8">بوكس عيد الأم </p>
                         <p class="col-4 price">$15.00</p>
                     </div>
                 </div>
                 <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
                     <img src="img/product new3.svg" class="img-fluid" alt="">
                     <div class="row">
-                        <p class="col-8">بوكس رمضان كريم </p>
+                        <p class="col-8">بوكس رمضان كريم بشكل جديد كليا  </p>
                         <p class="col-4 price">$15.00</p>
                     </div>
                 </div>
                 <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
                     <img src="img/product new4.svg" class="img-fluid" alt="">
                     <div class="row">
-                        <p class="col-8">بوكس رمضان كريم </p>
+                        <p class="col-8">بوكس بكلمة أحبك </p>
                         <p class="col-4 price">$15.00</p>
                     </div>
                 </div>
@@ -184,66 +184,7 @@
             </div>
         </div>
         </div>
-    </section> 
-    <!-- <div class="container">
-      <div id="carouselExampleControlsNoTouching" class="carousel slide " data-bs-touch="false">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="card-testimonials swiper-slide">
-              <img  src="img/1 (1).svg" class="main-img img-fluid" alt="">
-              <p>أحلام</p>
-              <p class="reviw">هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق.</p>
-              <span>
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-              </span>
-          </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card-testimonials swiper-slide">
-              <img  src="img/1 (1).svg" class="main-img img-fluid" alt="">
-              <p>أحلام</p>
-              <p class="reviw">هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق.</p>
-              <span>
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-                  <img src="img/star.svg" alt="">
-              </span>
-          </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card-testimonials swiper-slide">
-                    <img  src="img/1 (1).svg" class="main-img img-fluid" alt="">
-                    <p>أحلام</p>
-                    <p class="reviw">هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق.</p>
-                    <span>
-                        <img src="img/star.svg" alt="">
-                        <img src="img/star.svg" alt="">
-                        <img src="img/star.svg" alt="">
-                        <img src="img/star.svg" alt="">
-                        <img src="img/star.svg" alt="">
-                        <img src="img/star.svg" alt="">
-                    </span>
-                </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div> -->
+    </section>
     <!-- testimonials  -->
     <!-- faq  -->
     <section class="faq" id="faq">
