--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
     </section>
     <!-- qs  -->
     <!-- footer -->
-    <section>
+    <section id="orderNow"> 
       <div class="container">
-        <div id="orderNow" class="orderNow d-flex align-items-center justify-content-between">
+        <div  class="orderNow d-flex align-items-center justify-content-between">
           <div class="">
            <h5>مع وودرفول</h5>
            <p>أضيء ذكرياتك السعيدة</p>
