--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class=" mySwiper1 d-flex align-items-center justify-content-between">
                 <div class="swiper-wrapper">
                 <div class="card-testimonials swiper-slide">
-                    <img  src="img/1 (1).svg" class="main-img img-fluid" alt="">
+                    <!-- <img  src="img/1 (1).svg" class="main-img img-fluid" alt=""> -->
                     <p>أحلام</p>
                     <p class="reviw">هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق.</p>
                     <span>
@@ -156,7 +156,7 @@
                     </span>
                 </div>
                 <div class="card-testimonials swiper-slide">
-                    <img  src="img/1 (2).svg" class="main-img img-fluid" alt="">
+                    <!-- <img  src="img/1 (2).svg" class="main-img img-fluid" alt=""> -->
                     <p>فهد</p>
                     <p class="reviw">خدمة سريعة ورائعة والتذكار يجنن مرررة </p>
                     <span>
@@ -169,7 +169,7 @@
                     </span>
                 </div>
                 <div class="card-testimonials swiper-slide">
-                    <img  src="img/1 (3).svg" class="main-img img-fluid" alt="">
+                    <!-- <img  src="img/1 (3).svg" class="main-img img-fluid" alt=""> -->
                     <p>ابو طلال</p>
                     <p class="reviw">تذكار مميز اعجبني جدا ، أنصح بالتعامل معهم</p>
                     <span>
