--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +16,6 @@
   <!-- link icon  -->
   <link rel="icon" href="img/logo.svg">
 </head>
-
 <body>
   <!-- nav -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -68,7 +66,7 @@
       <div class="mainTitle container">
         <h1>اجعل ذكرياتك مميزة و تدوم مع <span class="name">وودرفول</span> </h1>
         <p>مع الضوء النابض بالحياة والتصميم الجذاب من المؤكد أن هذا التذكار المضيء سوف يكون هدية مثالية لك ولأحبابك</p>
-        <a class="navbar-brand order " href="#">اطلب تصميمك الآن</a>
+        <a class="navbar-brand order " href="http://wa.me/+966557678969" target="_blank">اطلب تصميمك الآن</a>
       </div>
     </div>
     <a href="#product" class="goToNextSection">
@@ -293,7 +291,7 @@
           <h5>مع وودرفول</h5>
           <p>أضيء ذكرياتك السعيدة</p>
         </div>
-        <a class="navbar-brand order-here" href="#">اطلب تصميمك الآن</a>
+        <a class="navbar-brand order-here" href="http://wa.me/+966557678969" target="_blank">اطلب تصميمك الآن</a>
         <div class="img-container">
           <img src="img/lsitproduct.jpg" class="" alt="">
         </div>
@@ -332,7 +330,7 @@
             <ul class="ul-footer">
               <li>
                 <img src="img/whatsapp.svg" class="contant" alt="">
-                <a href="tele:055 767 8969">0557678969</a>
+                <a href="http://wa.me/+966557678969" target="_blank">0557678969</a>
               </li>
               <li>
                 <img src="img/instagram.svg" class="contant" alt="">
@@ -340,7 +338,7 @@
               </li>
               <li>
                 <img src="img/website.svg" class="contant" alt="">
-                <a href="www.wooderful.com">WOODERFUL.COM</a>
+                <a href="http://wa.me/+966557678969" target="_blank">WOODERFUL.COM</a>
               </li>
             </ul>
           </div>
@@ -348,6 +346,10 @@
       </div>
     </div>
   </footer>
+  <div class="rights">
+    <img src="img/rights.svg" class="px-2" alt="">
+    <span>حقوق النشر محفوظة لوودرفول</span>
+  </div>
   <!-- footer -->
   <a href="#" class="goToNextSection1">
     <img src="img/down.svg" alt="">
