--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WoodrFul</title>
+   <meta property="og:site_name" content="WoodrFul - وودرفول ">
+    <meta property="og:title" content="WoodrFul - وودرفول " />
+    <meta property="og:description" content="تذكار مضيء يعرض طريقتك الفريدة في التعبير عن حبك, بتصميم أنيق وعصري وهيكل متين لابقاء تذكارك لعدة سنوات قادمة" />
+    <meta property="og:image" itemprop="image" content="img/logo.svg">
+    <meta property="og:type" content="Website"/>
+  <title>WoodrFul - وودرفول </title>
   <!-- link bootstrap  -->
   <link rel="stylesheet" href="css/bootstrap.rtl.min.css">
   <!-- link style  -->
@@ -20,7 +25,7 @@
   <!-- nav -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+      <a class="navbar-brand" href="#"><img src="img/logo.svg" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -54,13 +59,13 @@
     <div class="swiper mySwiper container">
       <div class="swiper-wrapper">
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slide1.jpg" alt="">
+          <img class="img-slider" src="img/slide1.jpg" alt="slider-img">
         </div>
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slide2.jpg" alt="">
+          <img class="img-slider" src="img/slide2.jpg" alt="slider-img">
         </div>
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slide 3.jpg" alt="">
+          <img class="img-slider" src="img/slide 3.jpg" alt="slider-img">
         </div>
       </div>
       <div class="mainTitle container">
@@ -70,7 +75,7 @@
       </div>
     </div>
     <a href="#product" class="goToNextSection">
-      <img src="img/down.svg" alt="">
+      <img src="img/down.svg" alt="goDown">
     </a>
   </section>
   <!-- hero section -->
@@ -79,7 +84,7 @@
     <div class="container">
       <div class="main-section">
         <p>عن المنتج</p>
-        <img src="img/mainSection.svg" alt="">
+        <img src="img/mainSection.svg" alt="mainSection">
       </div>
       <div class="product-layout  row">
         <div class="title-about w-50 col-12 col-md-10">
@@ -88,7 +93,7 @@
               إبتسامة على وجه شخص مهم في حياتك.</span></p>
         </div>
         <div class="img-about w-50 col-12 col-md-2">
-          <img src="img/about.svg" class="img-fluid" alt="">
+          <img src="img/about.svg" class="img-fluid" alt="about">
         </div>
       </div>
     </div>
@@ -104,13 +109,13 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="main">
-          <img src="img/listproduct3.jpg" alt=""class="img-fluid des">
+          <img src="img/listproduct3.jpg" alt="listproduct" class="img-fluid des">
 
           </div>
         </div>
         <div class="col-12 col-md-6">
           <div class="main">
-          <img src="img/listproduct4.jpg" alt=""class="img-fluid  des"  >
+          <img src="img/listproduct4.jpg" alt="listproduct" class="img-fluid  des"  >
           </div>
         </div>
     </div>
@@ -123,21 +128,21 @@
     <div class="container">
       <div class="main-section three-section">
         <p>تشكيلاتنا المميزة</p>
-        <img src="img/mainSection.svg" alt="">
+        <img src="img/mainSection.svg" alt="mainSection">
         <h5>نوفر تصاميم وتشكيلات مميزة ، أطلق العنان لإبداعك وإبتكر تصميمك الخاص الآن!</h5>
       </div>
       <div class="row">
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img src="img/lsitproduct.jpg" class="img-fluid" alt="">
+          <img data-src="img/lsitproduct.jpg" class="img-fluid lozad" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img src="img/listproduct1.jpg" class="img-fluid" alt="">
+          <img data-src="img/listproduct1.jpg" class="img-fluid lozad" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img src="img/listproduct3.jpg" class="img-fluid" alt="">
+          <img data-src="img/listproduct3.jpg" class="img-fluid lozad" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img src="img/listproduct4.jpg" class="img-fluid" alt="">
+          <img data-src="img/listproduct4.jpg" class="img-fluid lozad" alt="product">
         </div>
       </div>
     </div>
@@ -148,7 +153,7 @@
     <div class="container">
       <div class="main-section">
         <p>آراء العملاء</p>
-        <img src="img/mainSection.svg" alt="">
+        <img src="img/mainSection.svg" alt="mainSection">
       </div>
       <div class=" mySwiper1 d-flex align-items-center justify-content-between">
         <div class="swiper-wrapper">
@@ -157,33 +162,33 @@
             <p class="reviw">
               هدية مميزة و راقية جدا وذات جودة عالية شكرا على تعاملكم الذوق</p>
             <span>
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
             </span>
           </div>
           <div class="card-testimonials swiper-slide">
             <p>فهد الروقي</p>
             <p class="reviw">خدمة سريعة ورائعة والتذكار يجنن مرررة</p>
             <span>
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
             </span>
           </div>
           <div class="card-testimonials swiper-slide">
             <p>أبو طلال</p>
             <p class="reviw">تذكار مميز اعجبني جدا ، أنصح بالتعامل معهم</p>
             <span>
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
             </span>
           </div>
           <div class="card-testimonials swiper-slide ">
@@ -192,22 +197,22 @@
 
            
             <span>
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
             </span>
           </div>
           <div class="card-testimonials swiper-slide">
             <p> أم محمد </p>
             <p class="reviw rev5" >هذي الهبه الجديدة فعلا شغل جميل متعوب عليه طلبت لذكرى زواجي مرره حلوه </p>
             <span>
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
-              <img src="img/star.svg" alt="">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
             </span>
           </div>
         </div>
@@ -293,7 +298,7 @@
         </div>
         <a class="navbar-brand order-here" href="http://wa.me/+966557678969" target="_blank">اطلب تصميمك الآن</a>
         <div class="img-container">
-          <img src="img/lsitproduct.jpg" class="" alt="">
+          <img src="img/lsitproduct.jpg" class="" alt="lsitproduct">
         </div>
       </div>
     </div>
@@ -304,7 +309,7 @@
       <div class="footer-down">
         <div class="row">
           <div class="col-12 col-md-4 col-lg-4">
-            <img src="img/logo.svg" class="footer-img" alt="">
+            <img src="img/logo.svg" class="footer-img" alt="logo">
             <p>مع الضوء النابض بالحياة والتصميم الجذاب من المؤكد أن هذا التذكار المضيء سوف يكون هدية مثالية لك ولأحبابك
             </p>
           </div>
@@ -312,16 +317,16 @@
             <p class="title-footer">روابط سريعة</p>
             <ul class="ul-footer">
               <li>
-                <img src="img/footericon.svg" alt=""> <a class="nav-link1" href="#hero">عن المنتج</a>
+                <img src="img/footericon.svg" alt="footericon"><a class="nav-link1" href="#hero">عن المنتج</a>
               </li>
               <li>
-                <img src="img/footericon.svg" alt=""> <a class="nav-link1" href="#product-list">التشكيلات المميزة</a>
+                <img src="img/footericon.svg" alt="footericon"><a class="nav-link1" href="#product-list">التشكيلات المميزة</a>
               </li>
               <li>
-                <img src="img/footericon.svg" alt=""> <a class="nav-link1" href="#testimonials">آراء العملاء</a>
+                <img src="img/footericon.svg" alt="footericon"><a class="nav-link1" href="#testimonials">آراء العملاء</a>
               </li>
               <li><a></a>
-                <img src="img/footericon.svg" alt=""> <a class="nav-link1" href="#faq">الاسئلة الشائعة</a>
+                <img src="img/footericon.svg" alt="footericon"><a class="nav-link1" href="#faq">الاسئلة الشائعة</a>
               </li>
             </ul>
           </div>
@@ -329,15 +334,15 @@
             <p class="title-footer">تواصل معنا</p>
             <ul class="ul-footer">
               <li>
-                <img src="img/whatsapp.svg" class="contant" alt="">
+                <img src="img/whatsapp.svg" class="contant" alt="whatsapp">
                 <a href="http://wa.me/+966557678969" target="_blank">0557678969</a>
               </li>
               <li>
-                <img src="img/instagram.svg" class="contant" alt="">
+                <img src="img/instagram.svg" class="contant" alt="instagram">
                 <a href="https://instagram.com/woodrful?igshid=NDk5N2NlZjQ=">WOODERFUL</a>
               </li>
               <li>
-                <img src="img/website.svg" class="contant" alt="">
+                <img src="img/website.svg" class="contant" alt="website">
                 <a href="http://wa.me/+966557678969" target="_blank">WOODERFUL.COM</a>
               </li>
             </ul>
@@ -348,9 +353,12 @@
   </footer>
   <!-- footer -->
   <a href="#" class="goToNextSection1">
-    <img src="img/down.svg" alt="">
+    <img src="img/down.svg" alt="down">
   </a>
   <!-- footer -->
+  <!-- link lazy -->
+  <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
+  <!-- link lazy -->
   <!-- link swiper -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <!-- main js -->
@@ -358,5 +366,4 @@
   <!-- bootstrap js -->
   <script src="js/bootstrap.min.js"></script>
 </body>
-
 </html>
