--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta property="og:site_name" content="WoodrFul - وودرفول ">
     <meta property="og:title" content="WoodrFul - وودرفول " />
     <meta property="og:description" content="تذكار مضيء يعرض طريقتك الفريدة في التعبير عن حبك, بتصميم أنيق وعصري وهيكل متين لابقاء تذكارك لعدة سنوات قادمة بإضاءة قوية وحيوية من المؤكد أن تجعل بيتك يبدو مذهلاً" />
-    <meta property="og:image" itemprop="svg" content="img/logo.svg">
+    <meta property="og:svg" itemprop="svg" content="img/logo.svg">
     <meta property="og:type" content="Website"/>
   <title>WoodrFul - وودرفول </title>
   <!-- link bootstrap  -->
