--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta property="og:site_name" content="WoodrFul - وودرفول ">
     <meta property="og:title" content="WoodrFul - وودرفول " />
     <meta property="og:description" content="تذكار مضيء يعرض طريقتك الفريدة في التعبير عن حبك, بتصميم أنيق وعصري وهيكل متين لابقاء تذكارك لعدة سنوات قادمة بإضاءة قوية وحيوية من المؤكد أن تجعل بيتك يبدو مذهلاً" />
+    <meta name="description" content="تذكار مضيء يعرض طريقتك الفريدة في التعبير عن حبك, بتصميم أنيق وعصري وهيكل متين لابقاء تذكارك لعدة سنوات قادمة بإضاءة قوية وحيوية من المؤكد أن تجعل بيتك يبدو مذهلاً" />
     <meta property="og:image" itemprop="image" content="https://d.top4top.io/p_2624winq61.jpg">
     <meta property="og:type" content="Website"/>
-    <meta property="og:keywords" content="woodrful,هدية, متجر وودرفول , WoodrFul, وودرفول">
+    <meta name="keywords" content="woodrful,هدية, متجر وودرفول , WoodrFul, وودرفول">
   <title>WoodrFul - وودرفول </title>
   <!-- link bootstrap  -->
   <link rel="stylesheet" href="css/bootstrap.rtl.min.css">
