--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
       </div>
       <div class="row">
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img data-src="img/lsitproduct.jpg" class="img-fluid lozad" alt="product">
+          <img src="img/lsitproduct.jpg" class="img-fluid" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img data-src="img/listproduct1.jpg" class="img-fluid lozad" alt="product">
+          <img src="img/listproduct1.jpg" class="img-fluid" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img data-src="img/listproduct3.jpg" class="img-fluid lozad" alt="product">
+          <img src="img/listproduct3.jpg" class="img-fluid" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img data-src="img/listproduct4.jpg" class="img-fluid lozad" alt="product">
+          <img src="img/listproduct4.jpg" class="img-fluid" alt="product">
         </div>
       </div>
     </div>
@@ -358,9 +358,6 @@
     <img src="img/down.svg" alt="down">
   </a>
   <!-- footer -->
-  <!-- link lazy -->
-  <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
-  <!-- link lazy -->
   <!-- link swiper -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <!-- main js -->
