--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- nav -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="img/logo.svg" alt="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
           <img class="img-slider" src="img/slide2.jpg" alt="slider-img">
         </div>
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slide 3.jpg" alt="slider-img">
+          <img class="img-slider" src="img/slider0.jpg" alt="slider-img">
         </div>
       </div>
       <div class="mainTitle container">
@@ -327,7 +327,7 @@
               <li>
                 <img src="img/footericon.svg" alt="footericon"><a class="nav-link1" href="#testimonials">آراء العملاء</a>
               </li>
-              <li><a></a>
+              <li>
                 <img src="img/footericon.svg" alt="footericon"><a class="nav-link1" href="#faq">الاسئلة الشائعة</a>
               </li>
             </ul>
