--- a/index.html
+++ b/index.html
@@ -150,6 +150,22 @@
     </div>
   </section>
   <!-- product list section -->
+  <section class="image-slide">
+    <div id="image-comparison-slider">
+      <img src="img/imageslide (1).jpg" alt="before">
+      <div class="img-wrapper">
+        <img src="img/imageslide (2).jpg" alt="after">
+      </div>
+      <div class="handle">
+        <div class="handle-line"></div>
+        <div class="handle-circle">
+          <i class="fas fa-chevron-left"></i>
+          <i class="fas fa-chevron-right"></i>
+        </div>
+        <div class="handle-line"></div>
+      </div>
+    </div>
+  </section>
   <!-- testimonials  -->
   <section class="testimonials" id="testimonials">
     <div class="container">
