--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               إبتسامة على وجه شخص مهم في حياتك.</span></p>
         </div>
         <div class="img-about w-50 col-12 col-md-2">
-          <img src="img/about.svg" class="img-fluid" alt="about">
+          <img src="img/Mask group (1).svg" class="img-fluid" alt="about">
         </div>
       </div>
     </div>
@@ -111,13 +111,13 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="main">
-          <img src="img/listproduct3.jpg" alt="listproduct" class="img-fluid des">
+          <img src="img/main1 (1).png" class="img-fluid des">
 
           </div>
         </div>
         <div class="col-12 col-md-6">
           <div class="main">
-          <img src="img/listproduct4.jpg" alt="listproduct" class="img-fluid  des"  >
+          <img src="img/main1 (2).png" alt="listproduct" class="img-fluid  des"  >
           </div>
         </div>
     </div>
@@ -141,7 +141,7 @@
           <img src="img/listproduct (2).jpg" class="img-fluid" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img src="img/listproduct (3).jpg" class="img-fluid" alt="product">
+          <img src="img/slide/ramadan1.jpg" class="img-fluid" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
           <img src="img/lsitproduct (1).jpg" class="img-fluid" alt="product">
@@ -150,20 +150,48 @@
     </div>
   </section>
   <!-- product list section -->
-  <section class="image-slide">
-    <div id="image-comparison-slider">
-      <img src="img/imageslide (1).jpg" alt="before">
-      <div class="img-wrapper">
-        <img src="img/imageslide (2).jpg" alt="after">
-      </div>
-      <div class="handle">
-        <div class="handle-line"></div>
-        <div class="handle-circle">
-          <i class="fas fa-chevron-left"></i>
-          <i class="fas fa-chevron-right"></i>
+  <section class="image-slide container">
+      <div id="image-comparison-slider">
+        <img src="img/slide/imageslide (1).jpg" alt="before">
+        <div class="img-wrapper">
+          <img src="img/slide/imageslide (2).jpg" alt="after">
         </div>
-        <div class="handle-line"></div>
+        <div class="handle">
+          <div class="handle-line"></div>
+          <div class="handle-circle">
+            <i class="fas fa-chevron-left"></i>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+          <div class="handle-line"></div>
+        </div>
       </div>
+      <div id="image-comparison-slider" class="image-comparison-slider2">
+        <img src="img/slide/ramadan0.jpg" alt="before">
+        <div class="img-wrapper img-wrapper2">
+          <img src="img/slide/ramadan1.jpg" alt="after">
+        </div>
+        <div class="handle handle2">
+          <div class="handle-line"></div>
+          <div class="handle-circle">
+            <i class="fas fa-chevron-left"></i>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+          <div class="handle-line"></div>
+        </div>
+    </div>
+      <div id="image-comparison-slider" class="image-comparison-slider3">
+        <img src="img/slide/slide32.jpg" alt="before">
+        <div class="img-wrapper img-wrapper3">
+          <img src="img/slide/slide31.jpg" alt="after">
+        </div>
+        <div class="handle handle3">
+          <div class="handle-line"></div>
+          <div class="handle-circle">
+            <i class="fas fa-chevron-left"></i>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+          <div class="handle-line"></div>
+        </div>
     </div>
   </section>
   <!-- testimonials  -->
