--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     <div class="swiper mySwiper container">
       <div class="swiper-wrapper">
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slide1.jpg" alt="slider-img">
-        </div>
-        <div class="swiper-slide box">
-          <img class="img-slider" src="img/slide2.jpg" alt="slider-img">
-        </div>
-        <div class="swiper-slide box">
           <img class="img-slider" src="img/slider0.jpg" alt="slider-img">
+        </div>
+        <div class="swiper-slide box">
+          <img class="img-slider" src="img/slider2.png" alt="slider-img">
+        </div>
+        <div class="swiper-slide box">
+          <img class="img-slider" src="img/slider3.png" alt="slider-img">
         </div>
       </div>
       <div class="mainTitle container">
@@ -144,7 +144,7 @@
           <img src="img/slide/ramadan1.jpg" class="img-fluid" alt="product">
         </div>
         <div class="contnet col-12 col-md-6 col-lg-3 mb-4">
-          <img src="img/lsitproduct (1).jpg" class="img-fluid" alt="product">
+          <img src="img/slide/slide32.jpg" class="img-fluid" alt="product">
         </div>
       </div>
     </div>
