--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img class="img-slider" src="img/slider2.png" alt="slider-img">
         </div>
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slider3.png" alt="slider-img">
+          <img class="img-slider" src="img/slider_.png" alt="slider-img">
         </div>
       </div>
       <div class="mainTitle container">
