--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="main">
-          <img src="img/main1 (1).png" class="img-fluid des">
+          <img src="img/main1 (1).png" alt="listproduct" class="img-fluid des">
 
           </div>
         </div>
