--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
           <img class="img-slider" src="img/slider0.jpg" alt="slider-img">
         </div>
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slider2.png" alt="slider-img">
+          <img class="img-slider" src="img/slider22.png" alt="slider-img">
         </div>
         <div class="swiper-slide box">
-          <img class="img-slider" src="img/slider_.png" alt="slider-img">
+          <img class="img-slider" src="img/slider33.png" alt="slider-img">
         </div>
       </div>
       <div class="mainTitle container">
@@ -117,7 +117,7 @@
         </div>
         <div class="col-12 col-md-6">
           <div class="main">
-          <img src="img/main1 (2).png" alt="listproduct" class="img-fluid  des"  >
+          <img src="img/main2.png" alt="listproduct" class="img-fluid  des"  >
           </div>
         </div>
     </div>
